[project]
name = "response-api-proxy"
version = "0.1.0"
description = "A local logging proxy for OpenAI Responses API (or compatible), with cache analysis utilities."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "shiiwuz" }]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn[standard]>=0.27",
]

[project.scripts]
rap-proxy = "response_api_proxy.main:cli"
rap-analyze = "response_api_proxy.analyze:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/response_api_proxy"]
